[package]
name = "budget-bin"
version = "0.1.0"
authors = ["dan <danieleades@hotmail.com>"]
edition = "2018"

[dependencies]
budget-lib = { path = "../budget-lib" }
log = "0.4.6"
fern = "0.5.7"
chrono = { version = "0.4.6", features = ["serde"] }
dirs = "1.0.4"
clap = "2.32.0"
serde_yaml = "0.8.8"
decimal = "2.0.4"
